--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ pandas==1.1.4
 torchvision==0.4.1
 nas_bench_201==1.3
 matplotlib==3.2.2
-tensorflow==2.3.0
+tensorflow>=2.3.0
 dataset_utils==0.0.2
 Pillow==8.0.1
